pegando tradução no front

--- a/templates/main logado2.html
+++ b/templates/main logado2.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div id="upper">
-            <img src="https://lh3.googleusercontent.com/u/0/drive-viewer/AK7aPaBZRakYCEVfw_WA6zKbuLyJzVTf6D7sRQsZSrZAewYPAMT5Fh4VSwsLvzzKsJaHHSVaAIsO5gbZhDLJdWbf0rA-e3tvQQ=w1920-h965" id="logo" height="65" width="65">
+            <img src="https://i.ibb.co/p09LyDJ/libras-simbolo-liguagem-de-sinais-1-1.png" id="logo" height="65" width="65">
             <a href="#" class="logo">
                 TALIA
             </a>
