--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -412,6 +412,8 @@ nav a {
     display: flex;
     height: 100%;
     min-width: 100%;
+    padding: 5px;
+
     vertical-align: middle;
     text-align: center;
 }
