--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -345,15 +345,31 @@ nav a {
     
     width: 30vw;
     border: 1px solid black;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #historico-title{
-    height: 30px;
+    width: calc(100% - 40px);
+    height: 40px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    border-bottom: black solid 2px;
+
+    margin-top: 0px;
+    margin-bottom: 0px;
+
+    font-size: large;
 }
 
 #historico-palavras{
     width: 100%;
-    max-height: 85vh;
+    max-height:78vh;
 
     overflow-y:auto;
     overflow-x:hidden;
@@ -456,7 +472,7 @@ nav a {
     text-align: center;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 750px) {
     #auth-body {
         flex-direction: column;
     }
