--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -309,9 +309,11 @@ nav a {
 
 .video_screen {
     max-height: 70vh;
+    max-width: 100%;
+    width: 100%;
     aspect-ratio: 4/3;
 
-    background-color: white;
+    background-color: black;
 }
 #loading{
     min-width: 70vw;
@@ -326,20 +328,18 @@ nav a {
     -webkit-transform: rotateY(180deg);
     -moz-transform: rotateY(180deg); */
   
-    position: absolute; left: 0px; top: calc(15vh + 20px);
+    position: absolute; left: 0px;
 
-    max-height: 70vh;
+    height: 70vh;
     min-width: 70vw;
+
+    /* background-color: red; */
 
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.output_canvas{
-    max-height: 70vh;
-    aspect-ratio: 4/3;
-}
 #historico-container{
     max-height: 85vh;
     
@@ -411,9 +411,7 @@ nav a {
     height: calc(15vh - 20px);
     aspect-ratio: 1/1;
 
-    background-color: #333;
-    color: #fff;
-    border: none;
+    border:none;
 
     padding: 10px 10px;
     border-radius: 10px;
@@ -425,6 +423,15 @@ nav a {
 
 .botao-icone{
     height: calc(15vh - 40px);
+}
+
+#botao-esqueleto{
+    background-color: white;
+    border: 5px #333 solid;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #container-traducoes {
@@ -472,7 +479,7 @@ nav a {
     text-align: center;
 }
 
-@media (max-width: 750px) {
+@media (max-width: 1090px) {
     #auth-body {
         flex-direction: column;
     }
@@ -489,13 +496,30 @@ nav a {
         overflow-x:hidden;
     }
 
+    #canvas_container {
+        min-width: 100vw;
+    }
+
     #historico-container{
         min-width: 100vw;
     }
 
     #botoes-container{
+        height: 10vh;
         min-width: 100vw;
         z-index: 50;
+    }
+
+    .botao-baixo {
+        height: calc(10vh - 20px);
+    }
+
+    .botao-icone{
+        height: calc(10vh - 40px);
+    }
+
+    #container-traducoes {
+        height: calc(10vh - 20px);
     }
 }
 
