Adição da lingueta do histórico, front do login para celular e cabeçalho para celular

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -28,12 +28,12 @@ header {
     background-color: #333;
     color: #fff;
 
-    height: 15vh;
+    height: min-content;
     width: 100%;
 }
 
 header #upper {
-    width: 100vw;
+    max-width: 100vw;
     margin-top: 10px;
 
     display: flex;
@@ -43,10 +43,12 @@ header #upper {
 
 header #bottom {
     width: 100vw;
-    height: 25px;
+    height: min-content;
 
     display: flex;
     flex-direction: row;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .logo {
@@ -75,14 +77,17 @@ nav a {
 }
 
 #welcome {
-    width: 50vw;
-    height: 15px;
+    height: 100%;
     margin-top: 0px;
+    margin-bottom: 0px;
 
     font-weight: 700;
     font-size: 15px;
     text-align: start;
     margin-left: 20px;
+
+    display: flex;
+    align-items: center;
 }
 
 #bottom_bar {
@@ -379,6 +384,10 @@ nav a {
     align-items: center;
 }
 
+#lingueta{
+    display: none;
+}
+
 .historico-phrase:last-child{
     margin-bottom: 80px;
 }
@@ -480,6 +489,18 @@ nav a {
 }
 
 @media (max-width: 1090px) {
+    body{
+        overflow-y: scroll;
+    }
+
+    header #sem-login{
+        height: 10vh;
+    }
+
+    #bottom_bar{
+        display: none;
+    }
+
     #auth-body {
         flex-direction: column;
     }
@@ -488,20 +509,69 @@ nav a {
         min-height: min-content;
     }
 
+    .input-box {
+        width: calc(100%)
+    }
+
+    .button{
+        margin-bottom: 20px;
+    }
+
     #gravador-tela{
         min-width: 100vw;
+        height: 140vh;
         flex-direction: column;
-
-        overflow:scroll;
-        overflow-x:hidden;
+        background-color: black;
     }
 
     #canvas_container {
         min-width: 100vw;
     }
 
+    .video_box{
+        height: 70vh;
+    }
+
     #historico-container{
+        height: 70vh;
         min-width: 100vw;
+        background-color: white;
+
+        border-top-right-radius: 40px;
+        border-top-left-radius: 40px;
+    }
+
+    #historico-title{
+        top: -120px;
+        position: relative;
+    }
+
+    #historico-palavras{
+        top: -120px;
+        position: relative;
+    }
+
+    #historico-lingueta{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        min-width: 80px;
+        width: 80px;
+        aspect-ratio: 4/3;
+
+        background-color: white;
+        border-top-right-radius: 40px;
+        border-top-left-radius: 40px;
+
+        z-index: 50;
+
+        top: -100px;
+        position: relative;
+
+        color:black;
+        font-size: 40px;
+        font-weight: bold;
     }
 
     #botoes-container{
