--- a/templates/main.html
+++ b/templates/main.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{{url_for('static', filename='styles/main.css')}}"/>
 </head>
 <body>
-    <header>
+    <header id="sem_login">
         <div id="upper">
             <img src="https://i.ibb.co/p09LyDJ/libras-simbolo-liguagem-de-sinais-1-1.png" id="logo" height="65" width="65">
             <a href="#" class="logo">
