--- a/templates/translator.html
+++ b/templates/translator.html
@@ -9,8 +9,32 @@
     </div>
   </div>
   <div id="historico-container">
+    <p id="historico-lingueta">▼</p>
     <h2 id="historico-title">Histórico de Palavras</h2>
-    <div id="historico-palavras"></div>
+    <div id="historico-palavras">
+      <p class="historico-phrase">aq</p>
+      <p class="historico-phrase">ar</p>
+      <p class="historico-phrase">as</p>
+      <p class="historico-phrase">aa</p>
+      <p class="historico-phrase">ab</p>
+      <p class="historico-phrase">ac</p>
+      <p class="historico-phrase">ad</p>
+      <p class="historico-phrase">ae</p>
+      <p class="historico-phrase">af</p>
+      <p class="historico-phrase">ag</p>
+      <p class="historico-phrase">ah</p>
+      <p class="historico-phrase">ai</p>
+      <p class="historico-phrase">aj</p>
+      <p class="historico-phrase">ak</p>
+      <p class="historico-phrase">al</p>
+      <p class="historico-phrase">am</p>
+      <p class="historico-phrase">an</p>
+      <p class="historico-phrase">ao</p>
+      <p class="historico-phrase">ap</p>
+      <p class="historico-phrase">aq</p>
+      <p class="historico-phrase">ar</p>
+      <p class="historico-phrase">as</p>
+    </div>
   </div>
   <script src="{{url_for('static', filename='controller/translator.js')}}" type="module" defer></script>
 </div>
