--- a/templates/main logado2.html
+++ b/templates/main logado2.html
@@ -17,10 +17,10 @@
         </div>
         <div id="bottom">
             <p id="welcome">Bem vindo, {{username}}</p>
-            <div id="bottom_bar">
+            <!-- <div id="bottom_bar">
                 <a>Dicionário</a>
                 <a>Minhas amostras</a>
-            </div>
+            </div> -->
         </div>
     </header>
     {% block conteudo %}{% endblock %}
