--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -488,7 +488,7 @@ nav a {
     margin-left: 10px;
 }
 
-@media (max-width: 750) {
+@media (max-width: 750px) {
     body{
         overflow-y: scroll;
     }
