--- a/templates/translator.html
+++ b/templates/translator.html
@@ -11,15 +11,7 @@
   <div id="historico-container">
     <p id="historico-lingueta">▼</p>
     <h2 id="historico-title">Histórico de Palavras</h2>
-    <div id="historico-palavras">
-      <p class="historico-phrase">aq a as  a sd ads a sa  das d sa  a </p>
-      <p class="historico-phrase">ar</p>
-      <p class="historico-phrase">as</p>
-      <p class="historico-phrase">aa</p>
-      <p class="historico-phrase">ab</p>
-      <p class="historico-phrase">ac</p>
-      <p class="historico-phrase">ad</p>
-    </div>
+    <div id="historico-palavras"></div>
   </div>
   <script src="{{url_for('static', filename='controller/translator.js')}}" type="module" defer></script>
 </div>
