troca de nome dos arquivos que envolvem a tela do tradutor

--- a/templates/translate_screen.html
+++ b/templates/translate_screen.html
@@ -13,7 +13,7 @@
     <h2 id="historico-title">Histórico de Palavras</h2>
     <div id="historico-palavras"></div>
   </div>
-  <script src="{{url_for('static', filename='controller/translator.js')}}" type="module" defer></script>
+  <script src="{{url_for('static', filename='controller/translate_screen.js')}}" type="module" defer></script>
 </div>
 
 <div id="botoes-container" class="webcamButton">
