--- a/templates/main logado2.html
+++ b/templates/main logado2.html
@@ -13,7 +13,11 @@
             <a href="#" class="logo">
                 TALIA
             </a>
-            <p></p>
+            <div id="menu">
+                <div class="menu-line"></div>
+                <div class="menu-line"></div>
+                <div class="menu-line"></div>
+            </div>
         </div>
         <div id="bottom">
             <p id="welcome">Bem vindo, {{username}}</p>
@@ -21,6 +25,11 @@
                 <a>Dicionário</a>
                 <a>Minhas amostras</a>
             </div> -->
+        </div>
+        <div id="menu-tab">
+            <p id="menu-tab-x">X</p>
+            <br/>
+            <p id="menu-tab-option">Sinais que sei</p>
         </div>
     </header>
     {% block conteudo %}{% endblock %}
