página do dicionário e término do menu

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -46,7 +46,7 @@ header #menu{
     margin-right: 20px;
     cursor: pointer;
 
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: space-between;
 }
@@ -57,6 +57,10 @@ header #menu .menu-line{
 
     background-color: white;
     border-radius: 2px;
+}
+
+header #menu_help{
+    display: flex;
 }
 
 header #menu-tab{
@@ -84,21 +88,20 @@ header #menu-tab-x{
     color: white;
     font-weight: bolder;
     font-size: 40px;
-    
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    cursor: pointer;
     
     border-radius: 20px;
     margin-left: 20px;
 }
 
 header #menu-tab-option{
+    margin-left: 20px;
+
     color: #333;
     font-size: 20px;
-    margin-left: 20px;
     text-align: left;
     text-decoration: underline;
+    cursor: pointer;
 }
 
 header #bottom {
@@ -138,6 +141,7 @@ nav a {
 }
 
 #welcome {
+    width: 100%;
     height: 100%;
     margin-top: 0px;
     margin-bottom: 0px;
@@ -152,7 +156,7 @@ nav a {
 }
 
 #bottom_bar {
-    width: calc(50vw - 30px);
+    width: 100%;
     height: 15px;
 
     display: flex;
@@ -166,6 +170,7 @@ nav a {
     margin-right: 20px;
     color: white;
     cursor: pointer;
+    text-decoration: underline;
 }
 
 /** =========== TELA DE LOGIN =========== */
@@ -367,10 +372,6 @@ nav a {
     height: 70vh;
 
     background-color: black;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .video_screen {
@@ -390,20 +391,10 @@ nav a {
 }
 
 #canvas_container {
-    /* transform: rotateY(180deg);
-    -webkit-transform: rotateY(180deg);
-    -moz-transform: rotateY(180deg); */
-  
     position: absolute; left: 0px;
 
     height: 70vh;
     min-width: 70vw;
-
-    /* background-color: red; */
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 #historico-container{
@@ -420,10 +411,6 @@ nav a {
 #historico-title{
     width: calc(100% - 40px);
     height: 40px;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
 
     border-bottom: black solid 2px;
 
@@ -498,10 +485,6 @@ nav a {
 #botao-esqueleto{
     background-color: white;
     border: 5px #333 solid;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 #container-traducoes {
@@ -550,9 +533,50 @@ nav a {
     margin-right: 10px;
 }
 
+/** DICIONÁRIO */
+#container-sinais{
+    max-height: calc(85vh - 20px);
+    height: min-content;
+    width: 100vw;
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    overflow-y: auto;
+}
+
+.sinal{
+    height: calc(20vw - 70px);
+    aspect-ratio: 1/1;
+
+    background-color: black;
+
+    margin: 10px;
+    border-radius: 20px;
+}
+
+.sinal-button{
+    height: calc(20vw - 100px);
+
+    color:white;
+    font-size: 50px;
+    cursor: pointer;
+}
+
+.sinal-name{
+    height: 30px;
+
+    background-color: white;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border: 2px solid black;
+}
+
 @media landscape{
     .video_screen{
-        aspect-ratio: 4/3;
+        aspect-ratio: 3/4;
     }
 }
 
@@ -562,7 +586,39 @@ nav a {
     }
 }
 
+@media(max-width: 1070px){
+    .sinal{
+        height: calc(20vw);
+    }
+
+    .sinal-button{
+        height: calc(20vw - 30px);
+    }
+}
+
+@media(max-width: 850px){
+    .sinal{
+        height: calc(25vw);
+    }
+
+    .sinal-button{
+        height: calc(25vw - 30px);
+    }
+}
+
 @media (max-width: 750px) {
+    #bottom_bar {
+        display: none;
+    }
+
+    header #menu{
+        display: flex;
+    }
+
+    header #menu_help{
+        display: none;
+    }
+
     body{
         overflow-y: scroll;
     }
@@ -677,9 +733,25 @@ nav a {
     #container-traducoes {
         height: calc(10vh - 20px);
     }
+
+    .sinal{
+        height: calc(33vw - 50px);
+    }
+
+    .sinal-button{
+        height: calc(33vw - 80px);
+    }
 }
 
+@media(max-width: 600px){
+    .sinal{
+        height: calc(40vw);
+    }
 
+    .sinal-button{
+        height: calc(40vw - 30px);
+    }
+}
 
 /*! FOI PERCEBIDO QUE A IMAGEM EM SI NÃO RESPEITA A ÁREA BRANCA DO CONTAINER DE VÍDEO, ULTRAPASSANDO ELE CASO O TAMANHO DELE DIMINUIR  */
 /*! A altura é pega total */
