--- a/templates/main logado2.html
+++ b/templates/main logado2.html
@@ -27,9 +27,9 @@
                 <a onclick="window.location.replace(`{{url_for('translate_screen')}}`)">
                     Tradutor
                 </a>
-                <a onclick="window.location.replace(`{{url_for('dicionario')}}`)">
+                <!-- <a onclick="window.location.replace(`{{url_for('dicionario')}}`)">
                     Sinais que sei
-                </a>
+                </a> -->
             </div>
         </div>
         <div id="menu-tab">
@@ -37,10 +37,10 @@
             <br/>
             <p id="menu-tab-option" onclick="window.location.replace(`{{url_for('translate_screen')}}`)">
                 Tradutor
-            </p>
+            <!-- </p>
             <p id="menu-tab-option" onclick="window.location.replace(`{{url_for('dicionario')}}`)">
                 Sinais que sei
-            </p>
+            </p> -->
         </div>
     </header>
     {% block conteudo %}{% endblock %}
